# RAG_Research

./: .env.example  DEPLOY.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
src/api/: main.py  schemas.py
src/api/routes/: chat.py  documents.py
src/embedding/: embedder.py
src/generation/: context_resolver.py  llm.py
src/ingestion/: chunking.py  llama_parser.py  loaders.py  markdown_processor.py  metadata_extractor.py
src/retrieval/: reranker.py
src/storage/: supabase_client.py  vector_store.py
tests/: check_supabase.py  test_backend.py  test_document.txt  test_supabase.py  test_upload.py
ui/: app.py  requirements.txt
ui/pages/: 1_Library.py  2_Search.py
